<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yuukwn.kaibaipo.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/opcoes"
        android:textSize="30sp"
        android:layout_marginTop="60sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPedra"
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:layout_gravity="top"
            android:layout_margin="0sp"
            android:layout_weight="0.33"

            app:srcCompat="@drawable/papel" />

        <ImageView
            android:id="@+id/imgPapel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            app:srcCompat="@drawable/pedra" />

        <ImageView
            android:id="@+id/imgTesoura"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            app:srcCompat="@drawable/tesoura" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_margin="0sp"
        android:text="@string/ultimaJogada"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jogadaPlayer"
                android:textAlignment="center"

                />

            <ImageView
                android:id="@+id/imgPlayer"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/pedra" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jogadaPlayer"
                android:textAlignment="center"

                />

            <ImageView
                android:id="@+id/imgNpc"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/pedra" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venceu"
        android:textAlignment="center"
        android:textSize="20sp"/>


</LinearLayout>




